--- a/magic.css
+++ b/magic.css
@@ -100,3 +100,12 @@ a {
   font-weight: bold;
   margin-top: 2rem;
 }
+h4{
+  display: none;
+  background-color: violet;
+  padding:6px;
+}
+h1:hover h4{
+  display: block;
+  
+}
